dashboard/style.css
/* ... */
body.dark .cliente-card .ver-detalhes{
    color: var(--dark-blue);
}

/* ===== página de detalhes do cliente -> Isabella =====*/

.voltar {
    margin-right: auto;
    color: var(--cor1);
    font-size: var(--font-medium);
    border-radius: var(--radius-small); 
}

.voltar:hover {
    background-color: var(--cor1);
    color: white;
    transition: 0.1s ease;
}

.cliente-detalhes {
    position: relative;    
    display: flex;
    flex-direction: column;
    background-color: white;
    font-size: var(--font-base);
    padding: var(--spacing-small);
    border-radius: var(--radius);
    border: 2px solid var(--cor6);
}

.cliente-detalhes button {
    position: absolute;
    font-size: var(--font-small);
    background-color: var(--cor4);
    border: 2px solid var(--cor6);
    border-radius: var(--radius-small);    
    padding: var(--spacing-small-btn);
    right: var(--spacing-small);
    cursor: pointer;
}

.cliente-detalhes a {
    text-decoration: none;
    color: var(--cor1);    
    font-size: 10px;
    margin-top: 10px;
}

.card-veiculos {
    display: flex;
    flex-direction: column;
    background-color: white;
    margin: var(--spacing-cards);
    font-size: var(--font-base);
    padding: var(--spacing-small);    
    border-radius: var(--radius);
    border: 2px solid var(--cor6);
}

/* .card-servicos usado na pág. de serviços e detalhes do cliente */
.card-servicos {
    display: flex;
    flex-direction: column;
    position: relative;
    background-color: white;
    margin: var(--spacing-cards);
    font-size: var(--font-base);
    padding: var(--spacing-small);
    border-radius: var(--radius);
    border: 2px solid var(--cor6);
}

.card-servicos .info-servico {
    font-size: var(--font-base);
    color: var(--cor5);
}

.card-servicos .status {
    position: absolute;
    right: var(--spacing-small);
    border-radius: var(--radius-round);
    padding: 2px var(--spacing-big);
    font-size: var(--font-small);
}

.card-servicos .status.pendente {
    border: solid 1px #6060601a;
    color: #606060;
    background-color: #ececec;
}

.card-servicos .status.concluido {
    border: solid 1px #0092001a;
    color: #009200;
    background-color: #e7ffe7;
}

.card-servicos .status.andamento {
    border: solid 1px #d668001a;
    color: #d46700;
    background-color: #fff2e7;
}

.card-servicos .preco {
    position: absolute;
    font-size: var(--font-medium);
    color: var(--cor1);
    top: 38px;
    right: 12px;
}

.novo-orcamento {
    background-color: var(--cor);
    color: white;
    border-radius: var(--radius-round);
    padding: 8px var(--spacing-small);
    text-align: center;
    text-decoration: none;
}

/* Modo escuro */

body.dark .voltar{
    color: var(--dark-blue);
}

body.dark .cliente-detalhes{
    background-color: var(--dark-cinza-escuro);
    border: none;
}

body.dark .cliente-detalhes .info-destaque{
    color: white;
}

body.dark .cliente-detalhes button{
    background-color: var(--dark-cinza);
    border: none;
}

body.dark .cliente-detalhes a{
    color: var(--dark-blue);
}

body.dark .card-veiculos{
    background-color: var(--dark-cinza-escuro);
    border: none;
    color: white;
}

body.dark .novo-orcamento{
    background-color: var(--dark-blue);
    color: var(--dark-cinza-escuro);
    font-weight: 500;
}

/* Modo escuro - Ver detalhes */

body.dark .form-cliente{
    background-color: var(--dark-cinza-escuro);
}

body.dark .form-cliente input{
    background-color: var(--dark-cinza);
    border: none;
}

body.dark .form-cliente h2, body.dark .btn-fechar-servico{
    color: white;
}

body.dark .form-cliente .btn-excluir{
    color: red;
}

body.dark #btnAdicionar, body.dark .btn-salvar{
    background-color: var(--dark-blue);
    color: var(--dark-cinza-escuro);
    font-weight: 500;
}

/* ===== Página de Orçamentos -> Gabrielle ===== */

.pagina-orcamento > div {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

/* lista */
.lista-cliente {
    position: absolute;
    top: 100%;
    width: 80%;
    background: white;
    border-radius: 10px;
    margin-top: 10px;
    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
    display: none;
    max-height: 150px;
    overflow-y: auto; /*ativa o scroll*/
    z-index: 99;
}

/* itens */
.item-cliente, .item-veiculo{
    padding: 5px;
    cursor: pointer;
}

.item-cliente:hover {
    background-color: var(--cor6);
}

.container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 25px;
    margin-top: 25px;
}

.titulo{
    color: var(--cor1);
    font-size: 1.4em;
    margin-bottom: 10px;
}

.container h2{
    color: var(--cor5);
    font-weight: 300;
    font-size: 1em;
    margin-bottom: 5px;
    margin-top: 15px;
}

/* Campo para buscar por um cliente */
.busca{
    display: flex;
    align-items: center;
    position: relative;
}

.busca input{
    width: 100%;
    border-radius: 15px;
    border: none;
    padding: 15px;
    margin-right: 15px;
}

/* Ícone de busca dentro do campo de pesquisa */
.busca img{
    position: absolute;
    right: 70px;
    top: 15px;
    width: 20px;
}

/* Botão de adicionar cliente */
.busca button{
    background-color: var(--cor);
    width: 55px;
    border-radius: 10px;
    color: white;
    font-size: 1.5em;
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
}

/* Campo para selecionar o veículo */
.veiculo{
    display: flex;
    align-items: center;
    position: relative;
}

.veiculo input{
    width: 100%;
    border-radius: 15px;
    border: none;
    padding: 15px;
}

.lista-veiculos{
    position: absolute;
    top: 100%;
    width: 100%;
    background: white;
    border-radius: 10px;
    margin-top: 10px;
    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
    max-height: 150px;
    display: none;
}
/* ... */

